--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "packageManager": "pnpm@8.15.5",
   "license": "mit",
+  "engines": {
+    "node": ">= 20.0.0"
+  },
   "scripts": {
+    "prepare": "simple-git-hooks",
+    "bootstrap": "pnpm install",
+    "clean": "rm -rf ./node_modules",
     "mask": "npx tsx app/masks/build.ts",
-    "mask:watch": "npx watch \"yarn mask\" app/masks",
-    "dev": "concurrently -r \"yarn run mask:watch\" \"next dev\"",
-    "build": "yarn mask && cross-env BUILD_MODE=standalone next build",
+    "mask:watch": "npx watch \"pnpm mask\" app/masks",
+    "dev": "concurrently -r \"pnpm run mask:watch\" \"next dev\"",
+    "proxy-dev": "sh ./scripts/init-proxy.sh && proxychains -f ./scripts/proxychains.conf pnpm dev",
+    "build": "pnpm mask && cross-env BUILD_MODE=standalone next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "yarn mask && cross-env BUILD_MODE=export BUILD_APP=1 next build",
-    "export:dev": "concurrently -r \"yarn mask:watch\"  \"cross-env BUILD_MODE=export BUILD_APP=1 next dev\"",
-    "prompts": "node ./scripts/fetch-prompts.mjs",
-    "prepare": "husky install",
-    "proxy-dev": "sh ./scripts/init-proxy.sh && proxychains -f ./scripts/proxychains.conf yarn dev"
+    "lint": "eslint --fix",
+    "export": "pnpm mask && cross-env BUILD_MODE=export BUILD_APP=1 next build",
+    "export:dev": "concurrently -r \"pnpm mask:watch\"  \"cross-env BUILD_MODE=export BUILD_APP=1 next dev\"",
+    "prompts": "node ./scripts/fetch-prompts.mjs"
   },
   "dependencies": {
     "@fortaine/fetch-event-source": "^3.0.6",
@@ -47,13 +52,15 @@
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "rt-client": "https://github.com/Azure-Samples/aoai-realtime-audio-sdk/releases/download/js/v0.5.0/rt-client-0.5.0.tgz",
     "sass": "^1.59.2",
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.4",
-    "zustand": "^4.3.8",
-    "rt-client": "https://github.com/Azure-Samples/aoai-realtime-audio-sdk/releases/download/js/v0.5.0/rt-client-0.5.0.tgz"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "3.9.1",
+    "@eslint-react/eslint-plugin": "^1.21.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/js-yaml": "4.0.9",
@@ -65,18 +72,24 @@
     "@types/spark-md5": "^3.0.4",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "13.4.19",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-unused-imports": "^3.2.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.2",
-    "prettier": "^3.0.2",
+    "eslint": "^9.14.0",
+    "eslint-plugin-format": "^0.1.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "lint-staged": "^15.2.10",
+    "simple-git-hooks": "2.11.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.16.0",
     "typescript": "5.2.2",
     "watch": "^1.0.2",
     "webpack": "^5.88.1"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue,ts,tsx,css,html}": [
+      "npm run lint"
+    ]
   }
 }
