feat: optimize animation

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@langchain/langgraph": "^0.0.33",
     "@langchain/ollama": "^0.0.4",
     "@langchain/openai": "^0.2.6",
-    "langchain": "0.2.15",
     "@next/third-parties": "^14.1.0",
     "@pinecone-database/pinecone": "^2.2.0",
     "@qdrant/js-client-rest": "^1.8.2",
@@ -38,8 +37,9 @@
     "@vercel/analytics": "^0.1.11",
     "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.7.5",
-    "clsx": "^2.1.1",
+    "canvas": "^3.0.1",
     "cheerio": "^1.0.0-rc.12",
+    "clsx": "^2.1.1",
     "d3-dsv": "2",
     "duck-duck-scrape": "^2.2.4",
     "emoji-picker-react": "^4.9.2",
@@ -49,9 +49,10 @@
     "heic2any": "^0.0.4",
     "html-entities": "^2.4.0",
     "html-to-image": "^1.11.11",
-    "idb-keyval": "^6.2.1",
     "html-to-text": "^9.0.5",
     "https-proxy-agent": "^7.0.2",
+    "idb-keyval": "^6.2.1",
+    "langchain": "0.2.15",
     "mammoth": "^1.7.1",
     "markdown-to-txt": "^2.0.1",
     "md5": "^2.3.0",
@@ -60,8 +61,8 @@
     "nanoid": "^5.0.3",
     "next": "^14.1.1",
     "node-fetch": "^3.3.1",
-    "openapi-client-axios": "^7.5.5",
     "officeparser": "^4.0.8",
+    "openapi-client-axios": "^7.5.5",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -72,13 +73,13 @@
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "rt-client": "https://github.com/Azure-Samples/aoai-realtime-audio-sdk/releases/download/js/v0.5.0/rt-client-0.5.0.tgz",
     "sass": "^1.59.2",
     "sharp": "^0.33.3",
     "spark-md5": "^3.0.2",
     "srt-parser-2": "^1.2.3",
     "use-debounce": "^9.0.4",
-    "zustand": "^4.3.8",
-    "rt-client": "https://github.com/Azure-Samples/aoai-realtime-audio-sdk/releases/download/js/v0.5.0/rt-client-0.5.0.tgz"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@tauri-apps/api": "^1.6.0",
@@ -86,16 +87,16 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
+    "@types/html-to-text": "^9.0.1",
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "4.0.9",
     "@types/lodash-es": "^4.17.12",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.7",
     "@types/react-katex": "^3.0.0",
     "@types/spark-md5": "^3.0.4",
-    "@types/html-to-text": "^9.0.1",
-    "@types/md5": "^2.3.5",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.49.0",
@@ -112,7 +113,8 @@
     "tsx": "^4.16.0",
     "typescript": "5.2.2",
     "watch": "^1.0.2",
-    "webpack": "^5.88.1"
+    "webpack": "^5.88.1",
+    "raw-loader": "^4.0.2"
   },
   "resolutions": {
     "lint-staged/yaml": "^2.2.2",
