fix some bugs for suggestion

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ENABLE_BALANCE_QUERY=$ENABLE_BALANCE_QUERY
       - DISABLE_FAST_LINK=$DISABLE_FAST_LINK
       - OPENAI_SB=$OPENAI_SB
-      - $SILICONFLOW_API_KEY=$SILICONFLOW_API_KEY
+      - SILICONFLOW_API_KEY=$SILICONFLOW_API_KEY
       - SILICONFLOW_URL=$SILICONFLOW_URL
       - AZURE_URL=$AZURE_URL
       - AZURE_API_KEY=$AZURE_API_KEY
@@ -70,7 +70,7 @@ services:
       - ENABLE_BALANCE_QUERY=$ENABLE_BALANCE_QUERY
       - DISABLE_FAST_LINK=$DISABLE_FAST_LINK
       - OPENAI_SB=$OPENAI_SB
-      - $SILICONFLOW_API_KEY=$SILICONFLOW_API_KEY
+      - SILICONFLOW_API_KEY=$SILICONFLOW_API_KEY
       - SILICONFLOW_URL=$SILICONFLOW_URL
       - AZURE_URL=$AZURE_URL
       - AZURE_API_KEY=$AZURE_API_KEY
